# Application

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/mylib/: Application.hpp  Database.hpp  Log.hpp  WebPageInterface.hpp
lib/src/mylib/: Application.cpp  Database.cpp  WebPageInterface.cpp
src/: main.cpp
